[package]
name = "anki-latin-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.1"
genanki-rs = "0.4.0"

reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
